--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ def roleName="arn:aws:iam::************:role/MyEduLambdaExecRole"
 def lambdaFunctionName= "lambda-pojo"
 def handlerName="com.wolfpaulus.aws.Prime"
 def jsonPayload="{\"number\": 17}"
+//def lambdaFunctionName= "lambda-lex"
+//def handlerName="com.wolfpaulus.aws.Prime::handleLexRequest"
 
 
 // Gradle AWS Plugin
@@ -41,6 +43,8 @@ dependencies {
     // AWS Lambda
     compile group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.1.0'
     compile group: 'com.amazonaws', name: 'aws-lambda-java-events', version: '1.3.0'
+    // Amazon Lex
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-lexmodelbuilding', version: '1.11.170'
     // Logging
     compile group: 'com.amazonaws', name: 'aws-lambda-java-log4j', version: '1.0.0'
     // Unit Test
